man: add man page for virt-clone --reflink
Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/man/virt-clone.pod
+++ b/man/virt-clone.pod
@@ -119,6 +119,12 @@ No storage is cloned: disk images specific by --file are preserved as is,
 and referenced in the new clone XML. This is useful if you want to clone
 a VM XML template, but not the storage contents.
 
+=item --reflink
+
+When --reflink is specified, perform a lightweight copy. This is much faster
+if source images and destination images are all on the same btrfs filesystem.
+If COW copy is not possible, then virt-clone fails.
+
 =back
 
 =head2 Networking Configuration
