ja.po: Specify arguments order in a format string

--- a/po/ja.po
+++ b/po/ja.po
@@ -1427,7 +1427,7 @@ msgstr "USB リダイレクトのエラー"
 #: ../virtManager/console.py:574
 #, python-format
 msgid "%s %s %s at %d-%d"
-msgstr "%d-%d の %s %s %s "
+msgstr "%4$d-%5$d の %1$s %2$s %3$s "
 
 #: ../virtManager/console.py:728
 msgid "Leave fullscreen"
