--- a/po/tr.po
+++ b/po/tr.po
@@ -1315,7 +1315,7 @@ msgstr "USB yönlendirme hatası"
 #: ../virtManager/console.py:574
 #, python-format
 msgid "%s %s %s at %d-%d"
-msgstr "%d-%d deki %s %s %s  "
+msgstr "%4$d-%5$d deki %1$s %2$s %3$s  "
 
 #: ../virtManager/console.py:728
 msgid "Leave fullscreen"
