po: More tweaks to fix msgfmt issues

--- a/po/es.po
+++ b/po/es.po
@@ -3859,7 +3859,7 @@ msgstr "Esto sobrescribirá la ruta existente '%s'"
 #: ../virtinst/cli.py:345
 #, python-format
 msgid "Disk %s is already in use by other guests %s."
-msgstr "El disco %s ya está siendo utilizado por otro huésped"
+msgstr "El disco %s ya está siendo utilizado por otro huésped %s."
 
 #: ../virtinst/cli.py:361
 #, python-format
