--- a/po/hu.po
+++ b/po/hu.po
@@ -3613,7 +3613,7 @@ msgid ""
 "Syntax error at line %d: %s\n"
 "%s"
 msgstr ""
-"Szintatktikai hiba  %d: %\n"
+"Szintatktikai hiba  %d: %s\n"
 "%s"
 
 #: ../virtconv/vmx.py:125
