--- a/po/ja.po
+++ b/po/ja.po
@@ -4454,7 +4454,7 @@ msgstr ""
 #, python-format
 msgid "Controller number %d for disk of type %s has no empty slot to use"
 msgstr ""
-"ディスクの種類 %s に対するコントローラー番号 %d は使用できる空スロットがあり"
+"ディスクの種類 %d に対するコントローラー番号 %s は使用できる空スロットがあり"
 "ません。"
 
 #: ../virtinst/devicedisk.py:1038
