--- a/po/pl.po
+++ b/po/pl.po
@@ -3833,7 +3833,7 @@ msgid ""
 "user search permissions for the following directories: %s"
 msgstr ""
 "%s może nie być dostępne dla nadzorcy. Należy nadać użytkownikowi \"%s\" "
-"uprawnienia przeszukiwania do następujących katalogów:"
+"uprawnienia przeszukiwania do następujących katalogów: %s"
 
 #: ../virtinst/cli.py:432
 msgid ""
