virt-install: Add --boot uefi
Will enable UEFI if we know libvirt + hypervisor support it, and libvirt
is advertising a suitable UEFI binary.

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -451,28 +451,6 @@ configurations like ARM or PPC
 
 Use BIOSPATH as the virtual machine BIOS.
 
-=item B<--boot loader=/usr/share/OVMF/OVMF_CODE.fd,loader_ro=yes,loader_type=pflash>
-
-Specify that the virtual machine use the system-wide installed OVMF binary as
-boot firmware, mapped as a virtual flash chip. This form requests that libvirt
-instantiate the VM-specific UEFI varstore from the varstore template that is
-assigned to "/usr/share/OVMF/OVMF_CODE.fd" in libvirtd's "qemu.conf", in the
-"nvram" stanza.
-
-=item B<--boot loader=/.../OVMF_CODE.fd,loader_ro=yes,loader_type=pflash,nvram_template=/.../OVMF_VARS.fd>
-
-Specify that the virtual machine use the custom OVMF binary as boot firmware,
-mapped as a virtual flash chip. In addition, request that libvirt instantiate
-the VM-specific UEFI varstore from the custom "/.../OVMF_VARS.fd" varstore
-template.
-
-=item B<--boot loader=/.../OVMF_CODE.fd,loader_ro=yes,loader_type=pflash,nvram=/.../guest_VARS.fd>
-
-Specify that the virtual machine use the custom OVMF binary as boot firmware,
-mapped as a virtual flash chip. In addition, the VM-specific UEFI varstore is
-directly the preexistent file "/.../guest_VARS.fd"; it is not instantiated from
-any template.
-
 =item B<--boot menu=on,useserial=on>
 
 Enable the bios boot menu, and enable sending bios text output over
@@ -483,6 +461,21 @@ serial console.
 Path to a binary that the container guest will init. If a root C<--filesystem>
 has been specified, virt-install will default to /sbin/init, otherwise
 will default to /bin/sh.
+
+=item B<--boot uefi>
+
+Configure the VM to boot from UEFI. In order for virt-install to know the
+correct UEFI parameters, libvirt needs to be advertising known UEFI binaries
+via domcapabilities XML, so this will likely only work if using properly
+configured distro packages.
+
+=item B<--boot loader=/.../OVMF_CODE.fd,loader_ro=yes,loader_type=pflash,nvram_template=/.../OVMF_VARS.fd>
+
+Specify that the virtual machine use the custom OVMF binary as boot firmware,
+mapped as a virtual flash chip. In addition, request that libvirt instantiate
+the VM-specific UEFI varstore from the custom "/.../OVMF_VARS.fd" varstore
+template. This is the recommended UEFI setup, and should be used if
+--boot uefi doesn't know about your UEFI binaries.
 
 =back
 
