man: replace "--boot bootmenu=on" with "--boot menu=on"
Closes: https://bugzilla.redhat.com/show_bug.cgi?id=1192768

Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/man/virt-xml.pod
+++ b/man/virt-xml.pod
@@ -268,7 +268,7 @@ Change the <description> of domain 'example':
 
 # Enable the boot device menu for domain 'example':
 
-  # virt-xml example --edit --boot bootmenu=on
+  # virt-xml example --edit --boot menu=on
 
 Clear the previous <cpu> definition of domain 'winxp', change it to 'host-model', but interactively confirm the diff before saving:
 
