Drop all references to kqemu, it's long dead

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -921,7 +921,7 @@ completeness).
 
 =item --virt-type
 
-The hypervisor to install on. Example choices are kvm, qemu, xen, or kqemu.
+The hypervisor to install on. Example choices are kvm, qemu, or xen.
 Available options are listed via 'virsh capabilities' in the <domain> tags.
 
 This deprecates the --accelerate option, which is now the default behavior. To install a plain QEMU guest, use '--virt-type qemu'
